{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 924,
  "lineage": "bbba8034-0b6d-8fc7-471e-bfcdfaef1afc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03106012e0f725262",
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:elastic-ip/eipalloc-03106012e0f725262",
            "association_id": "eipassoc-049f768d5facd8585",
            "domain": "vpc",
            "id": "eipalloc-03106012e0f725262",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d75851a86ba47293",
            "private_dns": "ip-10-0-1-201.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-52-220-33-44.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.33.44",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "domrov-nat-eip"
            },
            "tags_all": {
              "Name": "domrov-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:internet-gateway/igw-0a55e58d3e354fd91",
            "id": "igw-0a55e58d3e354fd91",
            "owner_id": "458889634459",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7",
            "arn_suffix": "app/domrov-app-lb/15e34571e8d0e7f7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "domrov-app-lb-614148623.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "domrov-app-lb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-05817db199c123a1d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02709a5318492d5c7"
              },
              {
                "subnet_id": "subnet-05bf0eba47e9b0888"
              }
            ],
            "subnets": [
              "subnet-02709a5318492d5c7",
              "subnet-05bf0eba47e9b0888"
            ],
            "tags": {
              "Name": "domrov-app-lb"
            },
            "tags_all": {
              "Name": "domrov-app-lb"
            },
            "vpc_id": "vpc-0f93bcf971db09427",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/0845a87a3cdcaa57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/0845a87a3cdcaa57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/0845a87a3cdcaa57"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/7d988cf8cf727532",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:458889634459:certificate/cb6e5364-1e59-4d27-a08b-d5966588b2ca",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:targetgroup/domrov-app-tg/c3a7ca997ffcea0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/7d988cf8cf727532",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:listener/app/domrov-app-lb/15e34571e8d0e7f7/7d988cf8cf727532"
          },
          "dependencies": [
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api",
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc",
            "cloudflare_record.api_validation",
            "data.cloudflare_zone.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:targetgroup/domrov-app-tg/c3a7ca997ffcea0b",
            "arn_suffix": "targetgroup/domrov-app-tg/c3a7ca997ffcea0b",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:targetgroup/domrov-app-tg/c3a7ca997ffcea0b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:loadbalancer/app/domrov-app-lb/15e34571e8d0e7f7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "domrov-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "domrov-app-tg"
            },
            "tags_all": {
              "Name": "domrov-app-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:458889634459:targetgroup/domrov-app-tg/c3a7ca997ffcea0b"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03106012e0f725262",
            "association_id": "eipassoc-049f768d5facd8585",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-026b9ebe324db5e8f",
            "network_interface_id": "eni-0d75851a86ba47293",
            "private_ip": "10.0.1.201",
            "public_ip": "52.220.33.44",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02709a5318492d5c7",
            "tags": {
              "Name": "domrov-nat-gw"
            },
            "tags_all": {
              "Name": "domrov-nat-gw"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:route-table/rtb-0a5bf506f6b6c3e50",
            "id": "rtb-0a5bf506f6b6c3e50",
            "owner_id": "458889634459",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026b9ebe324db5e8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtb-0a5bf506f6b6c3e50",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:route-table/rtb-01af5923e7a0a13b0",
            "id": "rtb-01af5923e7a0a13b0",
            "owner_id": "458889634459",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a55e58d3e354fd91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtb-01af5923e7a0a13b0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0139b0fb0c44534ec",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0a5bf506f6b6c3e50",
            "subnet_id": "subnet-0b734bf78cb327372"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtbassoc-0139b0fb0c44534ec",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b35699f8628836be",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0a5bf506f6b6c3e50",
            "subnet_id": "subnet-01e36f86b465959f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtbassoc-0b35699f8628836be",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07be348d5df7b7851",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01af5923e7a0a13b0",
            "subnet_id": "subnet-02709a5318492d5c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtbassoc-07be348d5df7b7851",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee557f56fbb6d896",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-01af5923e7a0a13b0",
            "subnet_id": "subnet-05bf0eba47e9b0888"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "rtbassoc-0ee557f56fbb6d896",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:security-group/sg-0e2aa96d31840776b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2aa96d31840776b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from your IP only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Application Port from ALB only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05817db199c123a1d"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS for VPC Endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "gRPC between instances",
                "from_port": 50051,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 50051
              }
            ],
            "name": "domrov-app-sg-20260409200318700100000006",
            "name_prefix": "domrov-app-sg-",
            "owner_id": "458889634459",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "domrov-app-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "domrov-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "sg-0e2aa96d31840776b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:security-group/sg-0193fe5b7832abb39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0193fe5b7832abb39",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from App SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2aa96d31840776b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "domrov-db-sg-2026040920032129260000000a",
            "name_prefix": "domrov-db-sg-",
            "owner_id": "458889634459",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "domrov-db-sg"
            },
            "tags_all": {
              "Name": "domrov-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "sg-0193fe5b7832abb39",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:security-group/sg-05817db199c123a1d",
            "description": "Allow HTTP and HTTPS traffic to LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05817db199c123a1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "domrov-lb-sg",
            "name_prefix": "",
            "owner_id": "458889634459",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "domrov-lb-sg"
            },
            "tags_all": {
              "Name": "domrov-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "sg-05817db199c123a1d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:subnet/subnet-0b734bf78cb327372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b734bf78cb327372",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458889634459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "subnet-0b734bf78cb327372",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:subnet/subnet-01e36f86b465959f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e36f86b465959f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458889634459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "subnet-01e36f86b465959f5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:subnet/subnet-02709a5318492d5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02709a5318492d5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458889634459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "subnet-02709a5318492d5c7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:subnet/subnet-05bf0eba47e9b0888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bf0eba47e9b0888",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458889634459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "subnet-05bf0eba47e9b0888",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc/vpc-0f93bcf971db09427",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3075ebed0906943",
            "default_route_table_id": "rtb-03883418828cd9f99",
            "default_security_group_id": "sg-0c4b84e1d2c2b7c75",
            "dhcp_options_id": "dopt-083abece407099ef3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f93bcf971db09427",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03883418828cd9f99",
            "owner_id": "458889634459",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "domrov-vpc"
            },
            "tags_all": {
              "Name": "domrov-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpc-0f93bcf971db09427",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-07dbf31e0ba01d160",
            "dns_entry": [
              {
                "dns_name": "vpce-07dbf31e0ba01d160-33mhmq5i.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07dbf31e0ba01d160-33mhmq5i-ap-southeast-1a.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07dbf31e0ba01d160-33mhmq5i-ap-southeast-1b.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z05793812ZC4W6G7A9621"
              },
              {
                "dns_name": "ec2.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z0442921PXW6QZXNAP5B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07dbf31e0ba01d160",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0254f35bc14aa7944",
              "eni-0a04b0b8d297a67d2"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.125",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.65",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-07dbf31e0ba01d160",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-0c9d538106a2b2a35",
            "dns_entry": [
              {
                "dns_name": "vpce-0c9d538106a2b2a35-g20kwckn.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0c9d538106a2b2a35-g20kwckn-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0c9d538106a2b2a35-g20kwckn-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2messages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z05790071TRCX1W43MVN8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c9d538106a2b2a35",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a0db84a04642f5d",
              "eni-045412bf4f8e39235"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.88",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.60",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-0c9d538106a2b2a35",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-0eba2510a6b5c41ba",
            "dns_entry": [
              {
                "dns_name": "vpce-0eba2510a6b5c41ba-uh6cafm3.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0eba2510a6b5c41ba-uh6cafm3-ap-southeast-1a.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0eba2510a6b5c41ba-uh6cafm3-ap-southeast-1b.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z05778663H5GYJ5H1DXI9"
              },
              {
                "dns_name": "logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z05214333V0YCUY1VBK1Y"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z04485903UZ62S683HUSC"
              },
              {
                "dns_name": "streaming-logs.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z052141024LPQYQ2FR2RG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0eba2510a6b5c41ba",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ce7c1746ebd37c6",
              "eni-0d18cc7bb3c8c1894"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.logs",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.124",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.95",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-0eba2510a6b5c41ba",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-039a60c3555ea1bec",
            "dns_entry": [
              {
                "dns_name": "vpce-039a60c3555ea1bec-t04dtexr.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-039a60c3555ea1bec-t04dtexr-ap-southeast-1b.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-039a60c3555ea1bec-t04dtexr-ap-southeast-1a.monitoring.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "monitoring.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0523245HKDHTHQUYHS4"
              },
              {
                "dns_name": "monitoring.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z0523239IV7K76BM7RSG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-039a60c3555ea1bec",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-024205e00c10c4bd2",
              "eni-0765ef1287ace6ca0"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.monitoring",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.214",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.96",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-039a60c3555ea1bec",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-0fccd81a3536443d9",
            "dns_entry": [
              {
                "dns_name": "vpce-0fccd81a3536443d9-drl76a5z.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0fccd81a3536443d9-drl76a5z-ap-southeast-1b.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0fccd81a3536443d9-drl76a5z-ap-southeast-1a.secretsmanager.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "secretsmanager.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0442702ST9WH33JOEAY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fccd81a3536443d9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-029bf367e9b2eb18e",
              "eni-09d220275626e065a"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.secretsmanager",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.196",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.157",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-0fccd81a3536443d9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-05d6fa44b5593809a",
            "dns_entry": [
              {
                "dns_name": "vpce-05d6fa44b5593809a-952mfspo.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-05d6fa44b5593809a-952mfspo-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-05d6fa44b5593809a-952mfspo-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssm.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z05204051LDUEAM4V385V"
              },
              {
                "dns_name": "ssm.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z05785642XJ806VZZMGCH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05d6fa44b5593809a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07f68cc9258f47ceb",
              "eni-0cca8b81a443bd9a1"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.159",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.200",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-05d6fa44b5593809a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:458889634459:vpc-endpoint/vpce-0631fd307a677918f",
            "dns_entry": [
              {
                "dns_name": "vpce-0631fd307a677918f-ubet4e25.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0631fd307a677918f-ubet4e25-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0631fd307a677918f-ubet4e25-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z04435933VVBQV1ETG6N2"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z04435961MM6PZ8K1AY65"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0631fd307a677918f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d45cfc03d4c8c3f",
              "eni-0bec318ad8032966f"
            ],
            "owner_id": "458889634459",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e2aa96d31840776b"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.75",
                "subnet_id": "subnet-01e36f86b465959f5"
              },
              {
                "ipv4": "10.0.9.180",
                "subnet_id": "subnet-0b734bf78cb327372"
              }
            ],
            "subnet_ids": [
              "subnet-01e36f86b465959f5",
              "subnet-0b734bf78cb327372"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f93bcf971db09427"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458889634459",
            "id": "vpce-0631fd307a677918f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}